test/classes/stonea/objectIteratorNoParens.good
objectIteratorNoParens.chpl:13: error: method 'these' must have parentheses
